# ASTRA

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README  README.md  examplepCT.cc  pCTsimulation.cc
B1/: #CMakeLists.txt#  exampleB1.cc  exampleB1.cc~  init_vis.mac~
B1/include/: B1DetectorConstruction.hh  B1DetectorConstruction.hh~  B1EventAction.hh  B1EventAction.hh~  B1RunAction.hh  B1RunAction.hh~  B1SteppingAction.hh  CMOSHit.hh~  CMOSPixel.hh  CMOSSD.hh~
B1/src/: #CMOSHit.cc#  B1DetectorConstruction.cc~  B1EventAction.cc  B1EventAction.cc~  B1PrimaryGeneratorAction.cc  B1PrimaryGeneratorAction.cc~  B1RunAction.cc  B1RunAction.cc~  B1SteppingAction.cc  B1SteppingAction.cc~  CMOSHit.cc~  CMOSSD.cc  CMOSSD.cc~
PCT/: .gitignore  CMakeLists.txt  GNUmakefile  History  examplepCT.cc  examplepCT.in  init_vis.mac  run1.mac  vis.mac
PCT/include/: CMOSHit.hh  CMOSSD.hh  pCTActionInitialization.hh  pCTDetectorConstruction.hh  pCTEventAction.hh  pCTSteppingAction.hh
PCT/src/: B1DetectorConstruction.cc  pCTActionInitialization.cc  pCTDetectorConstruction.cc  pCTEventAction.cc  pCTPrimaryGeneratorAction.cc  pCTRootPersistencyManager.cc  pCTRunAction.cc  pCTXML.cc
PCT/src/CMOS/: CMOSHit.cc  CMOSPixel.cc
analysis/: CMakeLists.txt  advanced_event_display.cc  cesarTracker.cc  cesarbit.cc  energyRes.cc  energyRes_old.cc  energy_res.cc  event_display.cc  marcTracker.cc  pCTTrackingManager.cc  pCTTrackingManager.hh  pipos_test.cc  posResolution.cc  res_from_tracker_ana.cc  templateAna.cc  templateAna_old.cc  trackerTester.cpp  tracker_Test.cc
config/: pCT.xml
include/: EvNavHandler.hh  pCTConstructor.hh  pCTDetectorConstruction.hh  pCTEvent.hh  pCTEventHandler.hh  pCTPrimaryGeneratorAction.hh  pCTRootGeometryManager.hh  pCTRootPersistencyManager.hh  pCTRunAction.hh  pCTTrack.hh  pCTXML.hh
include/Astra/: AstraBar.hh  AstraHit.hh  AstraSD.hh  pCTAstraConstructor.hh
include/CMOS/: CMOSHit.hh  CMOSPixel.hh  CMOSSD.hh  pCTSiDetConstructor.hh
include/DMAPS/: DMAPSHit.hh  DMAPSPixel.hh  DMAPSSD.hh
include/Phantom/: PhantomHit.hh  phantom.hh  phantomConstructor.hh
include/SciDet/: SciDetBar.hh  SciDetHit.hh  SciDetSD.hh  pCTSciBarConstructor.hh  pCTSciDetConstructor.hh
include/SiDet/: pCTSiDetConstructor.hh
mac/: init_vis.mac  res_vis.mac  run2.mac  run_vis.mac  wrl_vis.mac
plotters/: CMakeLists.txt  plot_EnergyRes.cc  plot_EnergyRes_byThickness.cc  plot_energy_resolution.cc  plot_materials.cc  plot_phantom_Image.cc  plot_straightness.cc
scripts/: _make_file_for_displays.py  _make_image_ana.py  _make_image_prod.py  _make_materials_ana.py  _make_materials_prod.py  _make_res_ana.py  _make_res_prod.py  _show_displays.py  cj_runSim.py  do_all.py  energyRes_Mat.py  energyRes_RefFit_ana.py  energyRes_RefFit_prod.py  energyRes_ana.py  energyRes_prod.py  final_datasets.py  make_image.py  make_image_ana.py  make_image_prod.py  make_materials_prod.py  make_res_ana.py  make_res_prod.py  materials_prod.py  mg_runSim.py  piposi_prod.py  prod_for_imaging.py  prod_for_resolution.py  runSim.py
src/: CMakeLists.txt  EvNavHandler.cc  LinkDef.h  TrackFitter.cc  pCTConstructor.cc  pCTDetectorConstruction.cc  pCTEvent.cc  pCTEventAction.cc  pCTEventHandler.cc  pCTPrimaryGeneratorAction.cc  pCTRootGeometryManager.cc  pCTRootPersistencyManager.cc  pCTSteppingAction.cc  pCTTrack.cc  pCTTrackingManager.cc  pCTTrackingManager.hh  pCTXML.cc
src/Astra/: AstraBar.cc  AstraHit.cc  AstraSD.cc  pCTAstraConstructor.cc
src/CMOS/: CMOSHit.cc  CMOSPixel.cc  CMOSSD.cc
src/DMAPS/: DMAPSHit.cc  DMAPSPixel.cc  DMAPSSD.cc  pCTSiDetConstructor.cc
src/Phantom/: PhantomHit.cc  pCTPhantomConstructor.txt  phantom.cc  phantomConstructor.cc
src/SciDet/: SciDetBar.cc  SciDetHit.cc  SciDetSD.cc  pCTSciBarConstructor.cc  pCTSciDetConstructor.cc
src/SiDet/: pCTSiDetConstructor.cc
utils/: global_tools.cc
